--- a/Yamore/Yamore.API/Yamore.API.csproj
+++ b/Yamore/Yamore.API/Yamore.API.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Yamore.Services\Yamore.Services.csproj" />
+  </ItemGroup>
+
 </Project>
